# Rovi2

./: .gitignore  README.md  robwork-release-0.7.0.cfg.xml  rwsettings.xml
devel/: .catkin  .rosinstall  setup.sh
devel/include/caros_camera/: BaslerConfig.h  EnsensoConfig.h  PointGreyConfig.h
devel/include/caros_common_msgs/: CarosNodeState.h  ConfigBool.h  ConfigBoolRequest.h  ConfigBoolResponse.h  ConfigInt.h  ConfigIntRequest.h  ConfigIntResponse.h  EmptySrv.h  EmptySrvRequest.h  EmptySrvResponse.h  Q.h
devel/include/caros_common_robwork_msgs/: GetRwState.h  GetRwStateRequest.h  GetRwStateResponse.h  RwState.h  RwStateData.h
devel/include/caros_control_msgs/: GripperGripQ.h  GripperGripQRequest.h  GripperGripQResponse.h  GripperMoveQ.h  GripperMoveQRequest.h  GripperMoveQResponse.h  GripperSetForceQ.h  GripperSetForceQRequest.h  GripperSetForceQResponse.h  GripperSetVelocityQ.h  GripperSetVelocityQRequest.h  GripperSetVelocityQResponse.h  GripperState.h  GripperStopMovement.h  GripperStopMovementRequest.h  GripperStopMovementResponse.h  RobotState.h  SerialDeviceForceControlStart.h  SerialDeviceForceControlStartRequest.h  SerialDeviceForceControlStartResponse.h  SerialDeviceForceControlStop.h  SerialDeviceForceControlStopRequest.h  SerialDeviceForceControlStopResponse.h  SerialDeviceForceControlUpdate.h  SerialDeviceForceControlUpdateRequest.h  SerialDeviceForceControlUpdateResponse.h  SerialDeviceMoveLin.h  SerialDeviceMoveLinRequest.h  SerialDeviceMoveLinResponse.h  SerialDeviceMovePtp.h  SerialDeviceMovePtpRequest.h  SerialDeviceMovePtpResponse.h  SerialDeviceMovePtpT.h  SerialDeviceMovePtpTRequest.h  SerialDeviceMovePtpTResponse.h  SerialDeviceMoveServoQ.h  SerialDeviceMoveServoQRequest.h  SerialDeviceMoveServoQResponse.h  SerialDeviceMoveServoT.h  SerialDeviceMoveServoTRequest.h  (+7 more)
devel/include/caros_sensor_msgs/: ButtonSensorState.h  PoseSensorState.h  TactileArrayData.h  TactileArrayState.h
devel/include/caros_universalrobot/: UrServiceEmpty.h  UrServiceEmptyRequest.h  UrServiceEmptyResponse.h  UrServiceForceModeStart.h  UrServiceForceModeStartRequest.h  UrServiceForceModeStartResponse.h  UrServiceForceModeStop.h  UrServiceForceModeStopRequest.h  UrServiceForceModeStopResponse.h  UrServiceForceModeUpdate.h  UrServiceForceModeUpdateRequest.h  UrServiceForceModeUpdateResponse.h  UrServicePayload.h  UrServicePayloadRequest.h  UrServicePayloadResponse.h  UrServiceServoQ.h  UrServiceServoQRequest.h  UrServiceServoQResponse.h  UrServiceServoT.h  UrServiceServoTRequest.h  UrServiceServoTResponse.h  UrServiceSetIO.h  UrServiceSetIORequest.h  UrServiceSetIOResponse.h
devel/lib/cameranode/: cameranode
devel/lib/caros_camera/: caros_camera_node
devel/lib/caros_netft/: caros_netft_node
devel/lib/caros_robotiq/: caros_robotiq2_node  caros_robotiq3_node  simple_caros_robotiq2_demo  simple_caros_robotiq3_demo
devel/lib/caros_schunkpg70/: caros_schunkpg70_node
devel/lib/caros_teleoperation/: caros_teleoperation
devel/lib/caros_universalrobot/: caros_universalrobot_node  simple_caros_universalrobot_demo_using_move_ptp  simple_caros_universalrobot_demo_using_move_servo_q
devel/lib/collision/: collision
devel/lib/mainlogic/: mainlogic
devel/lib/pkgconfig/: cameranode.pc  caros_camera.pc  caros_common.pc  caros_common_msgs.pc  caros_common_robwork.pc  caros_common_robwork_msgs.pc  caros_control.pc  caros_control_msgs.pc  caros_netft.pc  caros_robotiq.pc  caros_schunkpg70.pc  caros_sensor.pc  caros_sensor_msgs.pc  caros_teleoperation.pc  caros_universalrobot.pc  collision.pc  mainlogic.pc  robot_plugin.pc  rrt.pc  ur_caros_example.pc
devel/lib/rrt/: rrt
devel/lib/ur_caros_example/: ur_caros_example
devel/share/cameranode/cmake/: cameranode-msg-extras.cmake  cameranode-msg-paths.cmake  cameranodeConfig.cmake
devel/share/caros_camera/cmake/: caros_cameraConfig.cmake
devel/share/caros_camera/docs/: BaslerConfig-usage.dox  BaslerConfig.dox  BaslerConfig.wikidoc  EnsensoConfig-usage.dox  EnsensoConfig.dox  EnsensoConfig.wikidoc  PointGreyConfig-usage.dox  PointGreyConfig.dox  PointGreyConfig.wikidoc
devel/share/caros_common/cmake/: caros_commonConfig.cmake
devel/share/caros_common_msgs/cmake/: caros_common_msgs-msg-paths.cmake  caros_common_msgsConfig.cmake
devel/share/caros_common_robwork/cmake/: caros_common_robworkConfig.cmake
devel/share/caros_common_robwork_msgs/cmake/: caros_common_robwork_msgs-msg-paths.cmake  caros_common_robwork_msgsConfig.cmake
src/Project_lib/: CellManager.cpp  CellManager.hpp
src/cameranode/: CMakeLists.txt  package.xml
src/cameranode/src/: cameranode.cpp
src/caros/hwcomponents/caros_leapmotion/: CMakeLists.txt  package.xml
src/caros/hwcomponents/caros_leapmotion/cmake/: use-c++11.cmake
src/caros/hwcomponents/caros_leapmotion/include/caros/: leap_motion_node.h  leap_sensor.h
src/caros/hwcomponents/caros_leapmotion/launch/: caros_leapmotion.launch
src/caros/hwcomponents/caros_leapmotion/src/: leap_motion_node.cpp  leap_sensor.cpp  main.cpp
src/caros/hwcomponents/caros_trakstar/: CMakeLists.txt  package.xml
src/caros/hwcomponents/caros_trakstar/cmake/Modules/: FindTrakSTAR.cmake
src/caros/hwcomponents/caros_trakstar/include/caros/: trakstar.h  trakstar_node.h
src/caros/hwcomponents/caros_trakstar/launch/: caros_trakstar_param.xml
src/caros/hwcomponents/caros_trakstar/src/: main.cpp  trakstar.cpp  trakstar_node.cpp
src/collision/: CMakeLists.txt  package.xml
src/collision/action/: Collision.action
src/collision/src/: collision.cpp
src/mainlogic/: CMakeLists.txt  package.xml
src/mainlogic/launch/: mainlogic.launch
src/mainlogic/src/: mainlogic.cpp
src/robot_plugin/: CMakeLists.txt  package.xml
src/robot_plugin/BuildTest/: CMakeCache.txt
src/robot_plugin/WorkStation_2/: CollisionSetup.xml  WC2_Scene_hard.wc.xml
src/robot_plugin/src/: RobotPlugin.cpp  RobotPlugin.hpp  RobotPlugin.ui  class.cpp  qtros.cpp  qtros.h
src/rrt/: CMakeLists.txt  package.xml
src/rrt/action/: RRT.action
src/rrt/src/: qTree.h  rrt.cpp  rrt.h
src/ur_caros_example/src/: ur_caros_example.cpp
(+293 files in other folders)
